# ensembl-valuesets-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: api.rst  conf.py  index.rst  install.rst  usage.rst
protobufs/: valuesets.proto
scripts/: update_grpc.sh
scripts/setup/docs/: Makefile  build_docs.sh
src/common/: config.py  valuesets_data.py
src/common/utils/: from_xlsx_to_json.py  valuesets_rpc_tinyclient.py
src/containers/: Dockerfile
src/grpc/ensembl/: client.py  server.py
src/grpc/ensembl/valuesets/: valuesets_pb2.py  valuesets_pb2_grpc.py
src/grpc/test/: test_valueset_data.py  test_valueset_servicer.py
src/grpcapi/ensembl/: client.py  server.py
src/grpcapi/ensembl/valuesets/: valuesets_pb2.py  valuesets_pb2_grpc.py
src/python/ensembl/: __init__.py
src/python/ensembl/utils/: client.py  from_xlsx_to_json.py  valuesets_rpc_client_example.py  valuesets_rpc_tinyclient.py
src/python/ensembl/valuesets/: config.py  valuesets.py  valuesets_data.py  valuesets_pb2.py  valuesets_pb2_grpc.py  valuesets_rpc_server.py
src/python/tests/: test_valueset_data.py  test_valueset_servicer.py
src/python/tests/data/: valuesets.json
src/rest/: handler.py  models.py  routes.py  server.py  utils.py
src/test/: test_rest_routes.py  test_valueset_data.py  test_valueset_servicer.py
src/test/data/: valuesets.json
