[project]
    name = "ensembl_valuesets"
    dynamic = [
        "version",
    ]
    requires-python = ">= 3.10"
    description = "Ensembl ValueSets gRPC API"
    readme = "README.md"
    authors = [
        {name = "Ensembl", email = "dev@ensembl.org"},
    ]
    license = { text = "Apache License 2.0" }
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = [
        "grpcio >= 1.54.0",
        "grpcio-tools >= 1.54.0",
        "openpyxl >= 3.1.2",
        "pandas >= 2.0.1",
        "protobuf >= 4.22.3",
        "typer >= 0.7",
        "requests >= 2.28.2",
    ]

[project.optional-dependencies]
    dev = [
        "black",
        "ipython",
        "mock",
        "Sphinx",
    ]
    test = [
        "pytest",
        "pylint",
        "mypy",
        "coverage",
        "mock",
        "Sphinx",
    ]
    doc = [
        "mock",
        "Sphinx",
    ]

[project.urls]
    homepage = "https://www.ensembl.org"
    repository = "https://github.com/Ensembl/ensembl-valuesets"

[project.scripts]
    ens_vset_run = "ensembl.valuesets.valuesets_rpc_server:main"
    ens_vset_makejson = "ensembl.utils.from_xlsx_to_json.py:main"
    ens_vset_client = "ensembl.utils.valuesets_rpc_tinyclient:main"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.dynamic]
version = {attr = "ensembl.valuesets.__version__"}

[tool.setuptools.packages.find]
where = ["src/python"]  # list of folders that contain the packages (["."] by default)

[build-system]
    requires = [
        "setuptools",
        "setuptools-scm",
        "wheel"
    ]
    build-backend = "setuptools.build_meta"

[tool.mypy]
    mypy_path = "src/python"
    ignore_missing_imports = true

[tool.black]
    line-length = 110

[tool.coverage.run]
    branch = true
    source = [
        "src/python",
    ]

[tool.pytest.ini_options]
    addopts = "-v --tb=native"
    testpaths = ["src/python/tests"]
    norecursedirs = ["data", "tmp*", "env", "docs", "apps", "basic_modules", "*.egg_info"]

