#[project]
#    name = "ensembl_valuesets"
#    description = "Ensembl ValueSets gRPC/REST API"
#    readme = "README.md"
#    authors = [
#        {name = "Ensembl", email = "dev@ensembl.org"},
#    ]
#    license = { text = "Apache License 2.0" }
#    classifiers = [
#        "Development Status :: 3 - Alpha",
#        "Environment :: Console",
#        "Intended Audience :: Science/Research",
#        "License :: OSI Approved :: Apache Software License",
#        "Operating System :: OS Independent",
#        "Natural Language :: English",
#        "Programming Language :: Python :: 3",
#        "Programming Language :: Python :: 3.10",
#        "Programming Language :: Python :: 3.11",
#        "Topic :: Scientific/Engineering :: Bio-Informatics",
#        "Topic :: Software Development :: Libraries :: Python Modules",
#    ]


#[project.scripts]
#    ens_vset_run = "src.grpc.ensembl.server:main"
#    ens_vset_makejson = "src.common.utils.from_xlsx_to_json:main"
#    ens_vset_client = "src.grpc.ensembl.client:main"

[tool.poetry]
    name = "ensembl_valuesets"
    version = "0.1.0"
    description = "Ensembl ValueSets gRPC/REST API"
    authors = ["Ensembl <dev@ensembl.org>"]
    license = "Apache-2.0"
    readme = "README.md"
    homepage = "https://www.ensembl.org"
    repository = "https://github.com/Ensembl/ensembl-valuesets-api"


[tool.poetry.dependencies]
    python = "^3.10"
    grpcio = "^1.54.0"
    grpcio-tools = "^1.54.0"
    openpyxl = "^3.1.2"
    pandas = "^2.0.1"
    protobuf = "^4.22.3"
    typer = "^0.9"
    requests = "^2.28.2"
    uvicorn = "^0.22.0"
    fastapi = "^0.95.0"
    pydantic = "^1.10"

[tool.poetry.dev-dependencies]
    pytest = "^7.3"
    pylint = "*"
    mypy = "*"
    coverage = "*"
    mock = "*"
    black = "*"
    ipython = "*"


[build-system]
    requires = [
        "poetry-core >= 1.4.0"
    ]
    build-backend = "poetry.core.masonry.api"

#[tool.mypy]
#    mypy_path = "src"
#    ignore_missing_imports = true
#
#[tool.black]
#    line-length = 110
#
#[tool.coverage.run]
#    branch = true
#    source = [
#        "src/grpc/test",
#    ]
#
#[tool.pytest.ini_options]
#    addopts = "-v --tb=native"
#    testpaths = ["src/grpc/test"]
#    norecursedirs = ["data", "tmp*", "env", "docs", "apps", "basic_modules", "*.egg_info"]

